# updateable-zip-file

./: .gitignore  pyproject.toml  readme.md
src/updateable_zip_file/: __init__.py
tests/: test_updateable_zip_file.py
updateable_zip_file/: __init__.py
