[tool.poetry]
name = "updateable-zip-file"
version = "0.1.0"
description = "A simple python package that builds on top of the standart library ZipFile, which allows user to update files inside a zip archive with ease."
authors = ["Michael van Straten <michael@vanstraten.de>"]
license = "Creative Commons"
keywords = ["zipfile"]
readme = "README.md"
repository = "https://github.com/michaelvanstraten/updateable-zip-file"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
