[project]
name = "updateable-zip-file"
version = "0.1.0"
description = "A simple python package that builds on top of the standart library ZipFile, which allows user to update files inside a zip archive with ease."
readme = "README.md"
authors = [{ name = "Michael van Straten", email = "michael@vanstraten.de" }]
requires-python = ">=3.7"
dependencies = []
keywords = ["zipfile"]

[project.urls]
repository = "https://github.com/michaelvanstraten/updateable-zip-file"

[dependency-groups]
dev = ["pytest<8.0.0,>=7.4.3"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
